# ipams-client

./: .gitignore  README.md
.github/workflows/: build-client.yml
client/: index.html  package-lock.json  package.json
client/src/: App.tsx
client/src-tauri/: .env  Cargo.toml  Info.plist  build.rs  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: auth.rs  config.rs  deep_link.rs  lib.rs  main.rs  tray.rs  ws_server.rs
client/src-tauri/src/transfer/: manager.rs  mod.rs  upload.rs
client/src/components/: TransferItem.tsx
client/src/pages/: TransferQueue.tsx
client/src/stores/: transfer.ts
client/src/types/: css.d.ts
